# modern-cpp-poker

./: .gitignore  CMakeLists.txt  README.md
include/poker/: action.hpp  card.hpp  concepts.hpp  deck.hpp  game.hpp  hand.hpp  player.hpp  strategy.hpp
include/poker/ai/: aggressive.hpp  conservative.hpp  smart.hpp
src/: main.cpp
